# openai_structured_output

./: pyproject.toml
