[tool.poetry]
name = "openai-structured-output"
version = "0.1.0"
description = ""
authors = ["Adi Pradhan <pradhan.aditya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
openai = "^1.40.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
